// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input simple 1`] = `
Array [
  <div
    className="css-jwj6c2"
    title="Input"
  >
    <input
      className="css-dmlzt9"
      onBlur={[Function]}
      onChange={[MockFunction]}
      onFocus={[Function]}
      placeholder="Placeholder"
      value="value"
    />
  </div>,
  <div
    className="css-jwj6c2"
  >
    <input
      className="css-18swi04"
      onBlur={[Function]}
      onChange={[MockFunction]}
      onFocus={[Function]}
      placeholder="Filter by uri, uuid, role, alias or labels"
      value="value"
    />
    <div
      className="css-6kpmax"
    >
      <svg
        className="css-1oq5xej"
        viewBox="0 0 16 16"
      >
        <use
          xlinkHref="#search"
        />
      </svg>
    </div>
  </div>,
]
`;

exports[`Input with left-/rightElement 1`] = `
Array [
  <div
    className="css-12xfqjm"
  >
    <button
      className="css-97f1p9"
      onClick={[Function]}
      type="button"
    >
      Filter
      <svg
        className="css-97hv11"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
    <input
      className="css-1g5zltl"
      onBlur={[Function]}
      onChange={[MockFunction]}
      onFocus={[Function]}
      placeholder="Filter by uri, uuid, role, alias or labels"
      value="value"
    />
    <div
      className="css-6kpmax"
    >
      <svg
        className="css-1au9vdq"
        onClick={[Function]}
        viewBox="0 0 16 16"
      >
        <use
          xlinkHref="#cancel"
        />
      </svg>
    </div>
  </div>,
  <div
    className="css-1swyuyu"
  >
    <input
      className="css-1g5zltl"
      onBlur={[Function]}
      onChange={[MockFunction]}
      onFocus={[Function]}
      placeholder="Filter by uri, uuid, role, alias or labels"
      value="value"
    />
    <div
      className="css-6kpmax"
    >
      <svg
        className="css-1oq5xej"
        viewBox="0 0 16 16"
      >
        <use
          xlinkHref="#search"
        />
      </svg>
    </div>
    <button
      className="css-97f1p9"
      onClick={[Function]}
      type="button"
    >
      Filter
      <svg
        className="css-97hv11"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>,
]
`;
